version/0.20/_sources/api/solver/_autosummary/settings/axes.rst.txt
:orphan:

.. _axes:

axes
====

.. autoclass:: ansys.fluent.core.solver.settings_241.axes.axes
    :show-inheritance:

.. rubric:: Attributes

==========================================   =========================

Attribute                                                      Summary

==========================================   =========================
:ref:`x <x_1>`                                      X-axis properties.

:ref:`y <y_1>`                                      Y-axis properties.

:ref:`background_color <background_color>`       Set background color.

==========================================   =========================

.. rubric:: Included in:

====================================================   ===========================================

Parent                                                                                     Summary

====================================================   ===========================================
:ref:`residual <residual>`                                       Enter the residual monitors menu.

:ref:`report_plots_child <report_plots_child>`                'child_object_type' of report_plots.

:ref:`histogram <histogram>`                                                    'histogram' child.

:ref:`cumulative_plot_child <cumulative_plot_child>`       'child_object_type' of cumulative_plot.

====================================================   ===========================================

